Add --add-opens for FieldUtil tests